--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,8 @@
     package="id.inditech.facerecognitionapp">
     <!-- <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/> -->
     <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
 
     <uses-feature
         android:name="android.hardware.camera"
@@ -24,7 +26,9 @@
         android:label="@string/app_name"
         android:supportsRtl="false"
         android:theme="@style/AppTheme">
-        <activity android:name=".RecognizeActivity"></activity>
+        <activity android:name=".LoadingActivity"></activity>
+        <activity android:name=".DaftarUserActivity" />
+        <activity android:name=".RecognizeActivity" />
         <activity android:name=".RegisterFaceActivity" />
         <activity
             android:name=".FaceRecognitionAppActivity"
