--- a/settings.gradle
+++ b/settings.gradle
@@ -1,3 +1,3 @@
 include ':app'
 include ':opencv'
-project(':opencv').projectDir = new File('OpenCV-sdk')
+project(':opencv').projectDir = new File("OpenCV-sdk")
