--- a/app/build.gradle
+++ b/app/build.gradle
@@ -81,7 +81,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-database:16.0.4'
     implementation 'org.apache.commons:commons-io:1.3.2'
 }
-
+apply plugin: 'com.google.gms.google-services'
 // These values are all set in my global gradle.properties file
 if (project.hasProperty('storeFile') && project.hasProperty('storePassword') && project.hasProperty('keyAlias') && project.hasProperty('keyPassword')) {
     android.signingConfigs.release.storeFile = file(storeFile)
