--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,11 +30,13 @@
         <activity android:name=".DaftarUserActivity" />
         <activity android:name=".RecognizeActivity" />
         <activity android:name=".RegisterFaceActivity" />
+        <activity android:name=".HistoryActivity" />
+        <activity android:name=".AboutActivity" />
         <activity
-            android:name=".FaceRecognitionAppActivity"
-            android:label="@string/app_name"
-            android:screenOrientation="fullSensor"
-            android:theme="@style/AppTheme.NoActionBar">
+            android:name=".FaceRecognitionAppActivity">
+            <!--android:label="@string/app_name"-->
+            <!--android:screenOrientation="fullSensor"-->
+            <!--android:theme="@style/AppTheme.NoActionBar">-->
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
