--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,7 +4,7 @@
     <!-- <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/> -->
     <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <uses-feature
         android:name="android.hardware.camera"
@@ -26,17 +26,18 @@
         android:label="@string/app_name"
         android:supportsRtl="false"
         android:theme="@style/AppTheme">
-        <activity android:name=".LoadingActivity"></activity>
+        <activity android:name=".LoginActivity"></activity>
+        <activity android:name=".LoadingActivity" />
         <activity android:name=".DaftarUserActivity" />
         <activity android:name=".RecognizeActivity" />
         <activity android:name=".RegisterFaceActivity" />
         <activity android:name=".HistoryActivity" />
         <activity android:name=".AboutActivity" />
-        <activity
-            android:name=".FaceRecognitionAppActivity">
-            <!--android:label="@string/app_name"-->
-            <!--android:screenOrientation="fullSensor"-->
-            <!--android:theme="@style/AppTheme.NoActionBar">-->
+        <activity android:name=".FaceRecognitionAppActivity">
+
+            <!-- android:label="@string/app_name" -->
+            <!-- android:screenOrientation="fullSensor" -->
+            <!-- android:theme="@style/AppTheme.NoActionBar"> -->
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
